@startuml

title __JAVAFXAPPLICATION's Class Diagram__\n

  namespace controller {
    class controller.AddAppointmentController {
    }
  }
  

  namespace controller {
    class controller.AddCustomerController {
    }
  }
  

  namespace controller {
    class controller.AppointmentController {
    }
  }
  

  namespace controller {
    class controller.CustomerController {
    }
  }
  

  namespace controller {
    class controller.LoginController {
    }
  }
  

  namespace controller {
    class controller.ReportsController {
    }
  }
  

  namespace controller {
    class controller.UpdateAppointmentController {
    }
  }
  

  namespace main {
    class main.Main {
    }
  }
  

  namespace model {
    class model.Appointment {
    }
  }
  

  namespace model {
    class model.Contact {
    }
  }
  

  namespace model {
    class model.Country {
    }
  }
  

  namespace model {
    class model.CourseInstructor {
    }
  }
  

  namespace model {
    class model.Customer {
    }
  }
  

  namespace model {
    class model.CustomerTest {
    }
  }
  

  namespace model {
    class model.Division {
    }
  }
  

  namespace model {
    class model.ReportOne {
    }
  }
  

  namespace model {
    class model.ReportThree {
    }
  }
  

  namespace model {
    class model.ReportTwo {
    }
  }
  

  namespace model {
    class model.Student {
    }
  }
  

  namespace model {
    class model.User {
    }
  }
  

  namespace model {
    class model.UserLogin {
    }
  }
  

  namespace utility {
    class utility.AppointmentDB {
    }
  }
  

  namespace utility {
    class utility.ContactDB {
    }
  }
  

  namespace utility {
    class utility.CountryDB {
    }
  }
  

  namespace utility {
    class utility.CustomerDB {
    }
  }
  

  namespace utility {
    class utility.DivisionDB {
    }
  }
  

  namespace utility {
    abstract class utility.JDBC {
    }
  }
  

  namespace utility {
    class utility.UserDB {
    }
  }
  

  controller.AddAppointmentController .up.|> javafx.fxml.Initializable
  controller.AddCustomerController .up.|> javafx.fxml.Initializable
  controller.AppointmentController .up.|> javafx.fxml.Initializable
  controller.CustomerController .up.|> javafx.fxml.Initializable
  controller.LoginController .up.|> javafx.fxml.Initializable
  controller.ReportsController .up.|> javafx.fxml.Initializable
  controller.UpdateAppointmentController .up.|> javafx.fxml.Initializable
  main.Main -up-|> javafx.application.Application
  model.CourseInstructor -up-|> model.Customer
  model.CustomerTest o-- model.Customer : customer
  model.Student -up-|> model.Customer
  model.UserLogin -up-|> model.User


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
